k8s/resources/console-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: console
  name: console
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: console
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.26.0 (40646f47)
      creationTimestamp: null
      labels:
        io.kompose.network/synapse: "true"
        io.kompose.service: console
    spec:
      containers:
        - args:
            - -c
            - echo "$CONSOLE_CONFIG_FILE" > /tmp/config.yml; /app/console
          command:
            - /bin/sh
          image: docker.redpanda.com/vectorized/console:latest
          name: redpanda-console
          ports:
            - containerPort: 8080
          resources: {}
      restartPolicy: Always
status: {}
