k8s/resources/apicurio-registry-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: apicurio-registry
  name: apicurio-registry
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: apicurio-registry
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.26.0 (40646f47)
      creationTimestamp: null
      labels:
        io.kompose.network/synapse: "true"
        io.kompose.service: apicurio-registry
    spec:
      containers:
        - env:
            - name: AUTH_ENABLED
              value: "false"
            - name: KAFKA_BOOTSTRAP_SERVERS
              value: redpanda:29092
            - name: KEYCLOAK_API_CLIENT_ID
              value: registry-api
            - name: KEYCLOAK_REALM
              value: registry
            - name: KEYCLOAK_UI_CLIENT_ID
              value: apicurio-registry
            - name: KEYCLOAK_URL
              value: http://localhost:8081
            - name: REGISTRY_DATASOURCE_PASSWORD
              value: postgres123!
            - name: REGISTRY_DATASOURCE_URL
              value: jdbc:postgresql://postgres/apicurio-registry
            - name: REGISTRY_DATASOURCE_USERNAME
              value: postgres
            - name: REGISTRY_EVENTS_KAFKA_TOPIC
              value: apicurio-registry-events
          image: apicurio/apicurio-registry-sql:latest-release
          name: apicurio-registry
          ports:
            - containerPort: 8080
          resources: {}
      restartPolicy: Always
status: {}
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: apicurio-registry
  name: apicurio-registry
spec:
  ports:
    - name: "8090"
      port: 8090
      targetPort: 8080
  selector:
    io.kompose.service: apicurio-registry
status:
  loadBalancer: {}
