k8s/resources/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: crazyfly-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    ingress.kubernetes.io/add-base-url: "true"
spec:
  rules:
    - http:
        paths:
          - path: /auth
            pathType: ImplementationSpecific
            backend:
              service:
                name: keycloak-service
                port:
                  number: 8443
          - path: /registry
            pathType: ImplementationSpecific
            backend:
              service:
                name: apicurio-registry-service
                port:
                  number: 8080
          - path: /redpanda-console
            pathType: ImplementationSpecific
            backend:
              service:
                name: console.redpanda.svc.cluster.local
                port:
                  number: 8080
